sfSandBoxCode/force-app/main/default/objects/Candidate_Evaluation_Stage__c/Candidate_Evaluation_Stage__c.object-meta.xml
<CustomObject>
    <label>Candidate Evaluation Stage</label>
    <nameField>
        <displayFormat>CES-{0000000}</displayFormat>
        <label>Candidate Evaluation Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Evaluation Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>