sfSandBoxCode/force-app/main/default/objects/Candidate_Evaluation_Stage__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidate Evaluation Stages</relationshipLabel>
    <relationshipName>Candidate_Evaluation_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>