sfSandBoxCode/force-app/main/default/objects/Candidate_Evaluation_Stage__c/fields/Candidate_Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Star_Rating__c</fullName>
    <formula>IMAGE( IF( ISPICKVAL( Candidate_Rating__c , &#39;1&#39;) , &quot;/img/samples/stars_100.gif&quot;, 
IF( ISPICKVAL( Candidate_Rating__c , &#39;2&#39;) , &quot;/img/samples/stars_200.gif&quot;, 
IF( ISPICKVAL( Candidate_Rating__c , &#39;3&#39;) , &quot;/img/samples/stars_300.gif&quot;, 
IF( ISPICKVAL( Candidate_Rating__c , &#39;4&#39;) , &quot;/img/samples/stars_400.gif&quot;, 
IF( ISPICKVAL( Candidate_Rating__c , &#39;5&#39;) , &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_100.gif&quot;))))) , &quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Star Rating</label>
    <type>Text</type>
</CustomField>