sfSandBoxCode/force-app/main/default/objects/Candidate_Evaluation_Stage__c/fields/Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Status__c</fullName>
    <label>Evaluation Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>