sfSandBoxCode/force-app/main/default/objects/Candidate_Evaluation_Stage__c/fields/In_Offer__c.field-meta.xml
<CustomField>
    <fullName>In_Offer__c</fullName>
    <label>In Offer</label>
    <length>60</length>
    <type>Text</type>
</CustomField>