sfSandBoxCode/force-app/main/default/objects/Candidate_Evaluation_Stage__c/fields/In_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Review__c</fullName>
    <label>In Review</label>
    <length>60</length>
    <type>Text</type>
</CustomField>